Changes for Perl extension ADAMK-Repository

0.06 Mon 26 Jan 2009
	- Upgrading to inc::Module::Install::DSL 0.82
	- Sort all files and dirs as we read them
	- Skip Araxis tests when we can't find it
	- Added ADAMK::Distribution::Export
	- Added ADAMK::Distribution::Checkout

0.05 Tue 23 Dec 2008
	- Adding support for distribution exporting
	- ADAMK::Release->distribution changed to distname
	- ADAMK::Release->distribution now points to a ADAMK::Distribution
	- ADAMK::Release->export works
	- ADAMK::Repository->compare_export_latest added
	- ADAMK::Repository->compare_export_stable works

0.04 (missing)

0.03 Wed 17 Nov 2008
	- Adding calculation of the latest release for a distribution
	- Adding support for extracting a release into a temp directory
	- Adding diff of svn to most recent release (via Araxis)

0.02 Thu 13 Nov 2008
	- Adding distribution loading
	- Adding preload support

0.01 Mon 10 Nov 2008
	- Creating initial skeleton